# Oversync

./: .gitignore  Cargo.toml  README.md
samples/: sample.json  syntax_invalid.json
src/: core.rs  fetchers.rs  main.rs
src/bot/: discord.rs
src/bot/discord/slash_commands/: configure.rs  debug.rs  mod.rs  shared.rs
src/core/: db.rs  feed.rs  messaging.rs  service.rs
src/fetchers/: fetcher.rs  rss.rs
src/scheduling/: scheduler.rs
