[package]
name = "oversync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
rss = "2.0"
async-trait = "0.1.57"
dotenvy = "0.15.5"
serde = "1.0.145"
serde_json = "1.0"
http = "0.2.8"
http-serde = "1.1.2"
clokwerk = "0.3.5"
chrono = { version = "0.4" , features = ["serde","default"]}

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "builder"]
version = "0.11.5"